src/objects/ProductAsset__c.object
<CustomObject>
    <description>Temporary object to hold Product and Assets</description>
    <fields>
        <fullName>ProductAssetDescription__c</fullName>
        <label>ProductAssetDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductAssetId__c</fullName>
        <label>ProductAssetId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductAssetName__c</fullName>
        <label>ProductAssetName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ProductAsset</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductAssets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>